# open-data-product-berlin-lor-health-and-social-structure-atlas-source-aligned

./: README.md  data-product-manifest.yml  data-product.yml  data-transformation-02-silver.yml  data-transformation-03-gold.yml  dpds.yml  main.ipynb  main.py  odps.yml  pyproject.toml
data/01-bronze/berlin-lor-health-and-social-structure-atlas-2013-00/: gssa_2022_bezirksregionen.csv  gssa_2022_planungsraeume.csv  gssa_2022_prognoseraeume.csv
data/01-bronze/berlin-lor-health-and-social-structure-atlas-2022-00/: gssa_2022_bezirke.csv
data/02-silver/berlin-lor-health-and-social-structure-atlas-2013-00/: berlin-lor-health-and-social-structure-atlas-2013-00-district-regions.csv  berlin-lor-health-and-social-structure-atlas-2013-00-districts.csv  berlin-lor-health-and-social-structure-atlas-2013-00-planning-areas.csv
data/02-silver/berlin-lor-health-and-social-structure-atlas-2022-00/: berlin-lor-health-and-social-structure-atlas-2022-00-forecast-areas.csv
data/03-gold/berlin-lor-health-and-social-structure-atlas-2013-00-csv/: berlin-lor-health-and-social-structure-atlas-2013-00-district-regions.csv  berlin-lor-health-and-social-structure-atlas-2013-00-planning-areas.csv
data/03-gold/berlin-lor-health-and-social-structure-atlas-2013-00-parquet/: berlin-lor-health-and-social-structure-atlas-2013-00-district-regions.parquet  berlin-lor-health-and-social-structure-atlas-2013-00-districts.parquet  berlin-lor-health-and-social-structure-atlas-2013-00-forecast-areas.parquet  (+1 more)
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
(+8 files in other folders)
