[project]
name = "open-data-product-berlin-lor-health-and-social-structure-atlas-source-aligned"
version = "0.1.0"
description = "Source-aligned data product combining Berlin LOR health and social structure data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "open-data-product-python-lib",
]

[tool.uv.sources]
open-data-product-python-lib = { git = "https://github.com/open-data-product/open-data-product-python-lib.git" }
